setup-scripts/08-minio/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  namespace: minio
  labels:
    app: minio
spec:
  selector:
    app: minio
  ports:
  - port: 80
    targetPort: 9090
    protocol: TCP
