setup-scripts/08-minio/minio-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-api-ingress
  namespace: minio
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production  
  labels:
    app: minio
spec:
  ingressClassName: nginx
  tls:
    - secretName: minio-api-ssl
      hosts:
      - s3.k8s2.feri.ai              
  rules:
  - host: "s3.k8s2.feri.ai"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: minio-api-service
              port:
                number: 80
